--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,28 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import FirstNab from '../components/FirstNab.astro';
+import MainNab from '../components/MainNab.astro';
+import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Menu from '../components/Menu.astro';
+import Offers from '../components/Offers.astro';
+import Delivery from '../components/Delivery.astro';
+import FoodList from '../components/FoodList.astro';
+import CustomerFeed from '../components/CustomerFeed.astro'
+import Gallary from '../components/Gallary.astro';
+import Contact from '../components/Contact.astro'
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<FirstNab />
+	<MainNab />
+	<Hero />
+	<Menu />
+	<Offers />
+	<Delivery />
+	<FoodList />
+	<CustomerFeed />
+	<Gallary />
+	<Contact />
+	<Footer />
 </Layout>
