--- a/src/components/CustomerFeed.astro
+++ b/src/components/CustomerFeed.astro
@@ -6,7 +6,7 @@ const testimonials = [
     position: "Dignissim",
     rating: 4,
     comment: "Tellus ultrices egestas justo duis. Leo sit quam ultrices turpis libero facilisis faucibus. Nulla elementum sed senectus nunc dolor augue.",
-    imageSrc: "/public/pasta.png"
+    imageSrc: "/pasta.png"
   }
 ];
 ---
