--- a/src/components/FirstNab.astro
+++ b/src/components/FirstNab.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 ---
 
 <section id="firstNav" class="firstNav">
-  <div class="time"><span><img src="/public/timepng.png" alt="openTime"></span>Mon-fri:8am - 10pm</div>
+  <div class="time"><span><img src="/timepng.png" alt="openTime"></span>Mon-fri:8am - 10pm</div>
   <div class="firstNavBtns">
     <ul>
       <li><a href="#" class="firstNavAbout">About Us</a></li>
