--- a/src/components/FoodList.astro
+++ b/src/components/FoodList.astro
@@ -4,56 +4,56 @@ const foodItems = [
   {
     title: "Spicy Burger",
     price: 10.90,
-    imageSrc: "/public/burger2.png",
+    imageSrc: "/burger2.png",
     rating: 4,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "French Fry",
     price: 12.90,
-    imageSrc: "/public/Fries.png",
+    imageSrc: "/Fries.png",
     rating: 5,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Pasta",
     price: 10.90,
-    imageSrc: "/public/pasta.png",
+    imageSrc: "/pasta.png",
     rating: 4,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Sandwiche",
     price: 12.90,
-    imageSrc: "/public/sandwiche.png",
+    imageSrc: "/sandwiche.png",
     rating: 5,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Pizza",
     price: 10.90,
-    imageSrc: "/public/Pizza.png",
+    imageSrc: "/Pizza.png",
     rating: 4,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Cold Drinks",
     price: 12.90,
-    imageSrc: "/public/cold-drink.png",
+    imageSrc: "/cold-drink.png",
     rating: 5,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Combo",
     price: 10.90,
-    imageSrc: "/public/Combo.png",
+    imageSrc: "/Combo.png",
     rating: 4,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Combo 2",
     price: 12.90,
-    imageSrc: "/public/Combo.png",
+    imageSrc: "/Combo.png",
     rating: 5,
     discount: "Get a 20% Discount On First Order"
   },
@@ -61,14 +61,14 @@ const foodItems = [
   {
     title: "Special Pizza",
     price: 15.90,
-    imageSrc: "/public/Pizza.png",
+    imageSrc: "/Pizza.png",
     rating: 5,
     discount: "Get a 20% Discount On First Order"
   },
   {
     title: "Mega Burger",
     price: 13.90,
-    imageSrc: "/public/burger2.png",
+    imageSrc: "/burger2.png",
     rating: 4,
     discount: "Get a 20% Discount On First Order"
   }
