--- a/src/components/Gallary.astro
+++ b/src/components/Gallary.astro
@@ -1,11 +1,11 @@
 ---
 const foodImages = [
-  "/public/Gallary1.jpg",
-  "/public/Gallary2.jpg",
-  "/public/Gallary3.jpg", 
-  "/public/Gallary4.jpg",
-  "/public/Gallary5.jpg",
-  "/public/Gallary6.jpg"
+  "/Gallary1.jpg",
+  "/Gallary2.jpg",
+  "/Gallary3.jpg", 
+  "/Gallary4.jpg",
+  "/Gallary5.jpg",
+  "/Gallary6.jpg"
 ];
 ---
 
