--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -27,6 +27,6 @@
   </div>
   
   <div class="flex justify-center items-center w-1/4 md:w-auto">
-    <img src="/public/burger1.png" alt="Burger" class="w-full h-auto object-contain" />
+    <img src="/burger1.png" alt="Burger" class="w-full h-auto object-contain" />
   </div>
 </section>
