--- a/src/components/Offers.astro
+++ b/src/components/Offers.astro
@@ -5,7 +5,7 @@ import './Offers.css'
   <div class="swiper offers-slider">
     <div class="swiper-wrapper">
       <div class="swiper-slide glass">
-        <img src="/public/tranding-food-1.png" alt="Trending Food 1" />
+        <img src="/tranding-food-1.png" alt="Trending Food 1" />
         <div class="offer-text">
           <h1>Pizza</h1>
           <a href="">Get a 20% Discount On FIRST ORDER</a>
@@ -13,7 +13,7 @@ import './Offers.css'
         </div>
       </div>
       <div class="swiper-slide glass">
-        <img src="/public/tranding-food-2.png" alt="Trending Food 2" />
+        <img src="/tranding-food-2.png" alt="Trending Food 2" />
         <div class="offer-text">
           <h1>Burger</h1>
           <a href="">Get a 20% Discount On FIRST ORDER</a>
@@ -21,7 +21,7 @@ import './Offers.css'
         </div>
       </div>
       <div class="swiper-slide glass">
-        <img src="/public/tranding-food-3.png" alt="Trending Food 3" />
+        <img src="/tranding-food-3.png" alt="Trending Food 3" />
         <div class="offer-text">
           <h1>Combo</h1>
           <a href="">Get a 20% Discount On FIRST ORDER</a>
@@ -32,7 +32,7 @@ import './Offers.css'
     <div class="swiper-pagination"></div>
   </div>
   <div class="about flex justify-between px-96">
-    <div class="abtImg h-96 bg-slate-600"><img class="h-full" src="/public/tranding-food-1.png"></div>
+    <div class="abtImg h-96 bg-slate-600"><img class="h-full" src="/tranding-food-1.png"></div>
     <div class="abtMsg bg-white w-1/2 flex flex-col justify-evenly py-9">
       <h1 class="font-serif text-4xl font-bold tracking-wide">About Tasty <span class="text-red-600">Food</span></h1>
       <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quae dicta iure eligendi dolor debitis odio placeat, at quidem natus optio nemo adipisci consequatur omnis vitae officiis repellat explicabo cupiditate.
