--- a/src/components/Delivery.astro
+++ b/src/components/Delivery.astro
@@ -6,7 +6,7 @@
     <h1 class="text-5xl font-bold text-wrap ">Choose your Favourite Food</h1>
     <p class="text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod impedit nesciunt cum similique consequuntur libero ipsum eum officiis quaerat, asperiores fuga laudantium dignissimos illum architecto, illo vitae. Ipsum, animi explicabo?</p>
   </div>
-  <div><img src="/public/delivery.png" alt=""></div>
+  <div><img src="/delivery.png" alt=""></div>
   <div class="flex flex-col gap-5">
     <h1 class="text-5xl font-bold text-wrap text-right">Order Online and Get Fast Delivery</h1>
     <p class="text-right text-wrag">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque illo at explicabo dolorem? Ipsam repellendus exercitationem alias facilis harum officia soluta ipsa a placeat quos reiciendis molestias, deserunt enim quo.
