--- a/src/components/Delivery.astro
+++ b/src/components/Delivery.astro
@@ -1,15 +1,27 @@
 ---
 ---
+<section class="w-full py-5">
+  <div class="w-full h-full flex items-center justify-between px-4 md:px-8 lg:px-12">
+    <!-- Left Content -->
+    <div class="flex-1 max-w-[30%]">
+      <h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl font-bold mb-2 md:mb-4">Choose your Favourite Food</h1>
+      <p class="text-xs sm:text-sm md:text-base xl:text-lg text-gray-600 line-clamp-4 md:line-clamp-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod impedit nesciunt cum similique consequuntur libero ipsum eum officiis quaerat.</p>
+    </div>
 
-<section class="deliverySection w-full h-1/2 flex items-center shrink gap-5 px-24">
-  <div  class="flex flex-col gap-5">
-    <h1 class="text-5xl font-bold text-wrap ">Choose your Favourite Food</h1>
-    <p class="text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod impedit nesciunt cum similique consequuntur libero ipsum eum officiis quaerat, asperiores fuga laudantium dignissimos illum architecto, illo vitae. Ipsum, animi explicabo?</p>
-  </div>
-  <div><img src="/delivery.png" alt=""></div>
-  <div class="flex flex-col gap-5">
-    <h1 class="text-5xl font-bold text-wrap text-right">Order Online and Get Fast Delivery</h1>
-    <p class="text-right text-wrag">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque illo at explicabo dolorem? Ipsam repellendus exercitationem alias facilis harum officia soluta ipsa a placeat quos reiciendis molestias, deserunt enim quo.
-    </p>
+    <!-- Center Image -->
+    <div class="flex-1 max-w-[30%] px-4">
+      <img 
+        src="/delivery.png" 
+        alt="Food Delivery Service" 
+        class="w-full h-auto object-contain"
+        loading="lazy"
+      >
+    </div>
+
+    <!-- Right Content -->
+    <div class="flex-1 max-w-[30%]">
+      <h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl font-bold mb-2 md:mb-4 text-right">Order Online and Get Fast Delivery</h1>
+      <p class="text-xs sm:text-sm md:text-base xl:text-lg text-gray-600 text-right line-clamp-4 md:line-clamp-none">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque illo at explicabo dolorem? Ipsam repellendus exercitationem.</p>
+    </div>
   </div>
 </section>
