--- a/src/components/FirstNab.astro
+++ b/src/components/FirstNab.astro
@@ -3,32 +3,29 @@ import { Image } from "astro:assets";
 ---
 
 <section id="firstNav" class="firstNav">
-  <div class="time"><span><img src="/timepng.png" alt="openTime"></span>Mon-fri:8am - 10pm</div>
+  <div class="fontSize time flex items-center text-lg"><img src="/timepng.png" alt="openTime">Mon-fri:8am - 10pm</div>
   <div class="firstNavBtns">
     <ul>
-      <li><a href="#" class="firstNavAbout">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="#" class="firstNavLogin">Login/Register</a></li>
+      <li><a href="#" class="fontSize firstNavAbout text-lg">About Us</a></li>
+      <li><a class="fontSize text-lg" href="#">Contact Us</a></li>
+      <li><a href="#" class="fontSize firstNavLogin text-lg">Login/Register</a></li>
     </ul>
   </div>
 </section>
 
 <style>
   .firstNav {
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
-	gap: 15rem;
+    gap: 5px;
     background-color: #fff;
     color: black;
     padding: 10px 20px;
     font-family: 'Arial, sans-serif';
-	border-bottom: 1px solid #000;
-}
-
-.time {
-    display: flex;
-    align-items: center;
+	  border-bottom: 1px solid #000;
 }
 
 .time img {
@@ -59,5 +56,17 @@ import { Image } from "astro:assets";
 
 .firstNavBtns ul li a:hover {
     background-color: #575757;
+}
+
+@media (max-width: 660px) {
+  .fontSize{
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 425px) {
+  .fontSize{
+    font-size: 0.5em;
+  }
 }
 </style>
