--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,10 @@
+---
+import FirstNab from '../components/FirstNab.astro';
+import MainNab from '../components/MainNab.astro';
+import Footer from '../components/Footer.astro';
+
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -13,7 +20,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
 	</head>
 	<body>
+		<FirstNab />
+		<MainNab />
 		<slot />
+	<Footer />
+
 	</body>
 </html>
 
@@ -23,4 +34,5 @@
 		width: 100%;
 		height: 100%;
 	}
+
 </style>
